--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
+body {
+  background-color: #045e7c;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,15 +17,172 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.bucket {
+  background: #e6f8fe;
+  border-radius: 2px;
+  display: inline-block;
+  margin: 1rem;
+  padding-bottom: 25px;
+  position: relative;
+  width: calc(320px - 1rem);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bucket:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+.close {
+  width: 96%;
+  margin: 2%;
+  height: 20px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.close > img {
+  height: 100%;
+}
+
+.input-container {
+  margin: 20px;
+}
+
+.bucket-animation-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 8vh 0;
+}
+
+.money-pile {
+  width: 40%;
+}
+
+.coin-transform {
+  /* transform: translate(-123px, -45px) rotate(-120deg); */
+  transform: translate(-123px, -45px);
+}
+
+.coin-transform-full {
+  transform: translate(-63px, -45px);
+}
+
+.coin {
+  width: 25px;
+  margin-top: -15px;
+  z-index: 3;
+  transition: all .5s;
+}
+
+.bucket-img {
+  width: 40%;
+  z-index: 2;
+  transition: all 0.5s;
+}
+
+.bucket-img-full {
+  transform: translate(60px);
+}
+
+
+
+
+
+
+
+
+.wrapper {
+    box-sizing: border-box;
+    padding: 5px;
+    width: 100%;
+}
+
+.wrapper .row:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+/**
+ * A block in a row
+ */
+.wrapper .block {
+    background-color: deeppink;
+    color: #fff;
+    text-align: center;
+
+    float: left;
+    height: 50px;
+    margin: 1%;
+    margin-bottom: 5px;
+    width: 18%;
+}
+
+/**
+ * As amount of blocks increases,
+ * Margin-left decreases.
+ */
+.wrapper .row1 .block:first-child {
+    margin-left: 40%;
+}
+
+.wrapper .row2 .block:first-child {
+    margin-left: 30%;
+}
+
+.wrapper .row3 .block:first-child {
+    margin-left: 20%;
+}
+
+.wrapper .row4 .block:first-child {
+    margin-left: 10%;
+}
+
+.row4 > img {
+  z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.bounce {
+  -webkit-animation: animation 100ms linear both;
+  animation: animation 100ms linear both;
+}
+
+/* Generated with Bounce.js. Edit at https://goo.gl/fHyJ7m */
+
+@-webkit-keyframes animation {
+  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  4.9% { -webkit-transform: matrix3d(1.094, 0, 0, 0, 0, 1.094, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.094, 0, 0, 0, 0, 1.094, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  9.81% { -webkit-transform: matrix3d(1.115, 0, 0, 0, 0, 1.115, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.115, 0, 0, 0, 0, 1.115, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  32.43% { -webkit-transform: matrix3d(1.034, 0, 0, 0, 0, 1.034, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.034, 0, 0, 0, 0, 1.034, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  54.95% { -webkit-transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+}
+
+@keyframes animation {
+  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  4.9% { -webkit-transform: matrix3d(1.094, 0, 0, 0, 0, 1.094, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.094, 0, 0, 0, 0, 1.094, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  9.81% { -webkit-transform: matrix3d(1.115, 0, 0, 0, 0, 1.115, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.115, 0, 0, 0, 0, 1.115, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  32.43% { -webkit-transform: matrix3d(1.034, 0, 0, 0, 0, 1.034, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.034, 0, 0, 0, 0, 1.034, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  54.95% { -webkit-transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+}
+
+
